--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
             <td>
             <label for="email">Email</label>
             <input type="email" id ="email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
-            title="email must be in the following order: characters@characters.domain" required>
+            title="email must be in the following order: name@dot.com" required>
 
             </td>
         
