--- a/registration.html
+++ b/registration.html
@@ -10,7 +10,7 @@
    
 
     </style>
-    <form>
+    <form action="registration.php">
 
         <table class="table table_reg">
             <thead>
