--- a/registration.html
+++ b/registration.html
@@ -6,11 +6,18 @@
     <!--Load font family from Google web fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="newstyles.css">
-    <style>
+    <script>
+
+     //javascript function to disable textfield when client and host radio button change
    
-
-    </style>
-
+    function abnDisabler() {
+        var chkHost = document.getElementById("host");
+        var divabn = document.getElementById("abntd");
+        var divcity = document.getElementById("tdcity");
+        divabn.style.display = chkHost.checked ? "block" : "none";
+        divcity.style.display = chkHost.checked ? "block" : "none";
+      }
+    </script>
     
 
 
@@ -23,9 +30,9 @@
       <body>
         <tr>
           <td class="reg_as" colspan="2">
-            Register as: <input type="radio" id="cus" name="cus_type" value="cus" checked="checked">
+            Register as: <input type="radio" id="cus" name="cus_type" value="cus" checked="checked" onclick="abnDisabler()">
             &nbsp;Client
-            <input type="radio" id="host" name="cus_type" value="host">
+            <input type="radio" id="host" name="cus_type" value="host" onclick="abnDisabler()">
             &nbsp;Host
   
           </td>
@@ -41,9 +48,9 @@
           </td>
         </tr>
         <tr>
-          <td>
-            <label for="abn">ABN (host only)</label>
-            <input type="text" id="abn" name="abn">
+          <td id="abntd" style="display: none;">
+            <label for="abn">ABN</label>
+            <input type="text" id="abn" name="abn" required>
           </td>
   
         </tr>
@@ -75,7 +82,7 @@
             <input type="text" id="address" name="address" required>
           </td>
   
-          <td>
+          <td id="tdcity" style="display: none;">
           <label for="city">City</label> &ensp;
       <select name="city" id="selectCity" required>
           <option value="">Select your city</option>
