--- a/registration.html
+++ b/registration.html
@@ -22,17 +22,18 @@
 
 
 <div class = "form-body">
-  <form action="registration.php" method = "post">
+  <form action="registration.php" method="post">
+
     <table class="table table_reg">
       <thead>
         <br>
       </thead>
-      <body>
+   
         <tr>
           <td class="reg_as" colspan="2">
-            Register as: <input type="radio" id="cus" name="cus_type" value="cus" checked="checked" onclick="abnDisabler()">
+            Register as: <input type="radio" id="cus" name="level" value="3" checked="checked" onclick="abnDisabler()">
             &nbsp;Client
-            <input type="radio" id="host" name="cus_type" value="host" onclick="abnDisabler()">
+            <input type="radio" id="host" name="level" value="2" onclick="abnDisabler()">
             &nbsp;Host
   
           </td>
@@ -47,13 +48,17 @@
             <input type="text" id="lname" name="lastname" required>
           </td>
         </tr>
+
         <tr>
           <td id="abntd" style="display: none;">
             <label for="abn">ABN</label>
-            <input type="text" id="abn" name="abn" required>
+            <input type="text" id="abn" name="abn">
           </td>
+
+          
   
         </tr>
+
         <tr>
           <td>
             <label for="email">Email</label>
@@ -84,7 +89,7 @@
   
           <td id="tdcity" style="display: none;">
           <label for="city">City</label> &ensp;
-      <select name="city" id="selectCity" required>
+      <select name="city" id="selectCity">
           <option value="">Select your city</option>
             <option value="Hobart">Hobart</option>
             <option value="Launceston">Launceston</option>
@@ -97,17 +102,17 @@
         <tr>
           <td colspan="2" class="agree">
             <input type="checkbox" id="terms" name="terms" value="terms" required>
-            I agree to the term and conditions
+            I agree to the terms and conditions
           </td>
         </tr>
   
         <tr>
           <td colspan="2" class="reg_btn">
             <br>
-            <input type="submit" value = "Register", name = "registerBtn"/>
+            <input type="submit" value = "Register" name = "registerBtn"/>
           </td>
         </tr>
-      </body>
+      
     </table>
   </form>
   </div>
