--- a/test.html
+++ b/test.html
@@ -1,6 +1,9 @@
-<form action="registration.php" method="post">
+<div class="row">
+
+    <div class="col-4">Image</div>
+
+    <div class="col-8"></div>
 
 
-    <input type="submit" value="Submit" name="registerBtn">
 
-</form>
+</div>
